--- a/demo0925/src/main/resources/config/application.properties
+++ b/demo0925/src/main/resources/config/application.properties
@@ -31,7 +31,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # jpa config
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # thymeleaf config
 spring.thymeleaf.cache=false
