--- a/demo0925/src/main/resources/config/application.properties
+++ b/demo0925/src/main/resources/config/application.properties
@@ -41,6 +41,14 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+# shiro config
+shiro.web.enabled=true
+shiro.sessionManager.sessionIdCookieEnabled=true
+shiro.sessionManager.sessionIdUrlRewritingEnabled=false
+shiro.unauthorizedUrl=/error
+shiro.successUrl=/shiro/dashboard
+shiro.loginUrl=/shiro/login
+
 # for Test
 com.hqyj.name=HymanHu
 com.hqyj.age=22
