--- a/demo0925/pom.xml
+++ b/demo0925/pom.xml
@@ -78,6 +78,7 @@
 		    <artifactId>shiro-spring-boot-web-starter</artifactId>
 		    <version>1.4.1</version>
 		</dependency>
+		<!-- thymeleaf对shiro的扩展包，支持页面书写shiro标签 -->
 		<dependency>
 			<groupId>com.github.theborakompanioni</groupId>
 			<artifactId>thymeleaf-extras-shiro</artifactId>
