--- a/sb_shiro/src/main/resources/config/application.properties
+++ b/sb_shiro/src/main/resources/config/application.properties
@@ -1,8 +1,29 @@
 # server config
-server.port=8085
+server.port=443
+server.http.port=80
+# ssl config
+server.ssl.key-store=classpath:.keystore
+server.ssl.key-store-password=123456
 
 # environment config
 spring.profiles.active=dev
+# dev config
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
+# data source
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+# hikari
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.auto-commit=true
+
+# myBatis
+mybatis.type-aliases-package= com.hqyj.shiro.modules.*.entity
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # for Test
 com.hqyj.name=HymanHu
