--- a/sb_shiro/src/main/resources/config/application.properties
+++ b/sb_shiro/src/main/resources/config/application.properties
@@ -22,8 +22,21 @@ spring.datasource.hikari.idle-timeout=180000
 spring.datasource.hikari.auto-commit=true
 
 # myBatis
-mybatis.type-aliases-package= com.hqyj.shiro.modules.*.entity
 mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.config-locations=classpath:config/SqlMapConfig.xml
+mybatis.type-aliases-package= com.hqyj.shiro.modules.*.entity
+mybatis.mapper-locations=classpath:config/*Mapper.xml
+
+# jpa
+spring.jpa.hibernate.ddl-auto=update
+
+# thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 # for Test
 com.hqyj.name=HymanHu
