--- a/sb_shiro/src/main/resources/config/application.properties
+++ b/sb_shiro/src/main/resources/config/application.properties
@@ -38,6 +38,9 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+# shiro
+shiro.web.enabled=true
+
 # for Test
 com.hqyj.name=HymanHu
 com.hqyj.age=22
