--- a/sb_erp/src/main/resources/config/application.properties
+++ b/sb_erp/src/main/resources/config/application.properties
@@ -34,4 +34,4 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # shiro
-shiro.web.enabled=false
+shiro.web.enabled=true
