--- a/sb_erp/src/main/resources/config/application.properties
+++ b/sb_erp/src/main/resources/config/application.properties
@@ -21,6 +21,7 @@ spring.datasource.hikari.auto-commit=true
 
 # myBatis
 mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.com.com.hqyj.erp.modules.account.dao=debug
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
