--- a/sb_erp/src/main/resources/config/application.properties
+++ b/sb_erp/src/main/resources/config/application.properties
@@ -25,6 +25,7 @@ logging.level.com.com.hqyj.erp.modules.account.dao=debug
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # thymeleaf
 spring.thymeleaf.cache=false
