--- a/ssm_hrms/src/main/webapp/WEB-INF/web.xml
+++ b/ssm_hrms/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<!-- 默认页面，webapp目录开始 -->
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/jsp/login.jsp</welcome-file>
+		<welcome-file>/jsp/common/login.jsp</welcome-file>
 	</welcome-file-list>
 	
 	<!-- servlet上下文参数 -->
@@ -26,10 +26,23 @@
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:config/log4j.xml</param-value>
     </context-param>
+    <!-- 配置mbeanDomain环境变量 -->
+    <context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>dev</param-value>
+	</context-param>
+	<context-param>
+		<param-name>spring.profiles.default</param-name>
+		<param-value>dev</param-value>
+	</context-param>
+	<context-param>
+		<param-name>spring.liveBeansView.mbeanDomain</param-name>
+		<param-value>dev</param-value>
+	</context-param>
 	
 	<!-- listener -->
-	<!-- log4j监听器 -->
-    <listener>
+	<!-- Log4j监听器 -->
+	<listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
     <!-- spring监听器 -->
@@ -55,11 +68,21 @@
         <filter-name>characterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
-    <!-- servlet -->
-    <!-- springMVC的servlet,加载config/springMvcConfig.xml文件，启动springMVC   
-       	 如果没有contextConfigLocation参数，则在/WEB_INF下去找springMvcConfig.xml文件  
-    -->
+    <!-- shiro过滤器 -->
+    <filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!-- servlet -->
     <servlet>
         <servlet-name>springMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -74,5 +97,5 @@
         <servlet-name>springMVC</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-	
+    
 </web-app>
