--- a/ssm_hrms/pom.xml
+++ b/ssm_hrms/pom.xml
@@ -88,9 +88,9 @@
 		    <version>1.3.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.github.pagehelper</groupId>
-		    <artifactId>pagehelper-spring-boot-starter</artifactId>
-		    <version>1.2.12</version>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.1.6</version>
 		</dependency>
 		
 		<!-- hibernate -->
