--- a/ssm_hrms/pom.xml
+++ b/ssm_hrms/pom.xml
@@ -10,6 +10,7 @@
 	
 	<properties>
 		<spring.version>4.3.13.RELEASE</spring.version>
+		<shiro.version>1.4.1</shiro.version>
 	</properties>
 	
 	<dependencies>
@@ -114,22 +115,22 @@
 		<dependency>  
 		    <groupId>org.apache.shiro</groupId>  
 		    <artifactId>shiro-core</artifactId>  
-		    <version>1.2.2</version>  
+		    <version>${shiro.version}</version>  
 		</dependency>  
 		<dependency>  
 		    <groupId>org.apache.shiro</groupId>  
 		    <artifactId>shiro-web</artifactId>  
-		    <version>1.2.2</version>  
+		    <version>${shiro.version}</version>  
 		</dependency>  
 		<dependency>  
 		    <groupId>org.apache.shiro</groupId>  
 		    <artifactId>shiro-spring</artifactId>  
-		    <version>1.2.2</version>  
+		    <version>${shiro.version}</version>  
 		</dependency>  
 		<dependency>  
 		    <groupId>org.apache.shiro</groupId>  
 		    <artifactId>shiro-ehcache</artifactId>  
-		    <version>1.2.2</version>  
+		    <version>${shiro.version}</version>  
 		</dependency>
 		
 		<!-- servlet -->
