--- a/sb_demo/pom.xml
+++ b/sb_demo/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>com.hqyj</groupId>
 	<artifactId>sb_demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>sb_demo</name>
 	<description>Demo project for Spring Boot</description>
 	
@@ -18,12 +19,19 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+		    <scope>provided</scope>
 		</dependency>
 
 		<dependency>
