--- a/sb_demo/src/main/resources/config/application.properties
+++ b/sb_demo/src/main/resources/config/application.properties
@@ -1,8 +1,16 @@
 # for port
-server.port=8085
+server.port=443
+server.other.port=80
+# for ssl
+server.ssl.key-store=classpath:.keystore
+server.ssl.key-store-password=123456
 
-# for logger
-logging.config=classpath:config/logback-dev.xml
+# for environment
+spring.profiles.active=dev
+# for dev tools
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
+
 
 # for Test
 com.test.name=HymanHu111
