--- a/sb_demo/src/main/resources/config/application.properties
+++ b/sb_demo/src/main/resources/config/application.properties
@@ -10,7 +10,22 @@ spring.profiles.active=dev
 # for dev tools
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
+# data source
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+# hikari
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.auto-commit=true
 
+# myBatis
+mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.config-locations=classpath:config/SqlMapConfig.xml
+#mybatis.type-aliases-package= com.hqyj.shiro.modules.*.entity
+#mybatis.mapper-locations=classpath:config/*Mapper.xml
 
 # for Test
 com.test.name=HymanHu111
