--- a/sb_demo/src/main/resources/config/application.properties
+++ b/sb_demo/src/main/resources/config/application.properties
@@ -24,8 +24,8 @@ spring.datasource.hikari.auto-commit=true
 # myBatis
 mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.config-locations=classpath:config/SqlMapConfig.xml
-#mybatis.type-aliases-package= com.hqyj.shiro.modules.*.entity
-#mybatis.mapper-locations=classpath:config/*Mapper.xml
+mybatis.type-aliases-package= com.hqyj.demo.modules.*.entity
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 # for Test
 com.test.name=HymanHu111
