--- a/sb_demo/src/main/resources/config/application.properties
+++ b/sb_demo/src/main/resources/config/application.properties
@@ -27,6 +27,19 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package= com.hqyj.demo.modules.*.entity
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
+# for jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# for thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
 # for Test
 com.test.name=HymanHu111
 com.test.age=221
