--- a/sb_demo/src/main/resources/config/application.properties
+++ b/sb_demo/src/main/resources/config/application.properties
@@ -10,6 +10,9 @@ spring.profiles.active=dev
 # for dev tools
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
+# for upload file size
+#spring.servlet.multipart.maxFileSize=-1
+#spring.servlet.multipart.maxRequestSize=-1
 # data source
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
